...

    <string name="ballotlist_distance">Distance: </string>

    <string name="alert_error" translatable="false">Error</string>
    <string name="alert_ok" translatable="false">OK</string>
    <string name="alert_distanceerror">You need to be within 500m</string>
    <string name="alert_emptyfields">Please fill out both fields.</string>

    <string name="status_open" translatable="false">Open</string>
    <string name="status_closed">Closed</string>

    <string name="bridgeadmin_newbridge">New Bridge</string>
    <string name="bridgeadmin_savenew">Save new</string>
...
    <string name="alert_success">Success</string>
    <string name="alert_failure">Failure</string>
    <string name="alert_accountsucces">Your account has been made. Please log in to use the app.</string>
    <string name="alert_accountfailure">This account already exist. Please  try another.</string>
    <string name="alert_deletesuccess">User has been succesfully deleted.</string>
    <string name="alert_deletefailure">Something went wrong, please try again later.</string>
    <string name="alert_message">Your password and confirmed password do not match.</string>
    <string name="alert_wrong_credentials">You have entered an incorrect username and/or password. Please try again.</string>
    <string name="alert_bridge_saved">The bridge has succesfully been saved.</string>
    <string name="alert_bridge_deleted">The bridge has succesfully been deleted.</string>


</resources>
...
